--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,14 @@
+# Customized
+.DS_Store
+*/.DS_Store
+.gitignore
+
+__pycache__/
+*/__pycache__/
+
+.ipynb_checkpoints/
+*/.ipynb_checkpoints/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
